--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@ main {
 #radio1,
 #radio2,
 #radio3 {
-  /* opacity: 0; */
+  opacity: 0;
   width: 1.5rem;
   height: 1rem;
   cursor: pointer;
@@ -99,7 +99,7 @@ main {
 
 .radio-control {
   position: absolute;
-  /* left: 6%; */
+  left: 6%;
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
