--- a/style/style.css
+++ b/style/style.css
@@ -48,13 +48,13 @@ main {
 .main-title-text {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   width: 90%;
 }
 
 .main-title-text > p {
-  align-self: flex-end;
   margin-right: 1.3rem;
-  padding-bottom: 0.1rem;
+  padding-bottom: 0.35rem;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -99,7 +99,7 @@ main {
 
 .radio-control {
   position: absolute;
-  left: 6%;
+  /* left: 6%; */
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
