--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,7 @@ main {
   margin: 6rem 0 6rem 0;
 }
 
+/****title and theme****/
 .main-title {
   display: flex;
   justify-content: space-between;
@@ -99,7 +100,6 @@ main {
 
 .radio-control {
   position: absolute;
-  /* left: 6%; */
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
@@ -112,10 +112,17 @@ main {
   background-color: #f96b5b;
 }
 
-/* END MAIN TITLE */
-
+/****input user****/
 .input-user {
   margin: 2rem 0 1.5rem 0;
+  padding: 2.3rem 2rem 2.2rem 0;
+  background-color: #181f33;
+  border: none;
+  text-align: right;
+  border-radius: 10px;
+  font-size: var(--fs-input);
+  color: var(--clr-text);
+  outline: none;
 }
 
 .attribution {
