--- a/style/style.css
+++ b/style/style.css
@@ -125,6 +125,44 @@ main {
   outline: none;
 }
 
+.main-btn-grid {
+  display: grid;
+  grid-template: 64px 64px 64px 64px 64px/ 1fr 1fr 1fr 1fr;
+  padding: 1.25rem;
+  gap: 24px 24px;
+  background-color: #242d44;
+  border-radius: 10px;
+}
+
+.main-btn-grid button:nth-child(4),
+.main-btn-grid button:nth-child(17),
+.main-btn-grid button:nth-child(18) {
+  font-size: var(--fs-btn);
+}
+
+.main-btn {
+  font-size: var(--fs-btn-numbers);
+  background-color: var(--bg-btn);
+  color: var(--clr-btn);
+  border: none;
+  border-radius: 10px;
+  box-shadow: inset 0px -4px 0px #b3a497;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.main-btn:hover {
+  background-color: var(--hover-btn);
+}
+
+.btn-reset {
+  grid-column: 1/3;
+}
+
+.btn-result {
+  grid-column: 3/5;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
