bugfix: theme cursor in mobile

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -20,10 +20,10 @@
 
   .main-theme-label {
     width: 62px;
-    padding-right: 5px;
+    padding-right: 6px;
   }
 
-  .main-theme-ouput {
+  .main-theme-output {
     width: 71px;
   }
 }
