--- a/style/mobile.css
+++ b/style/mobile.css
@@ -5,19 +5,14 @@
     --fs-previous-operand: 1rem;
     --fs-btn: 1.25rem;
   }
+
+  /****main content****/
   main {
     width: 90%;
     margin: 1.8rem 0 1.8rem 0;
   }
 
-  .output {
-    min-height: 6rem;
-  }
-
-  .calculator-btn {
-    gap: 13px 13px;
-  }
-
+  /****title and theme****/
   .main-theme-label {
     width: 62px;
     padding-right: 6px;
@@ -25,5 +20,15 @@
 
   .main-theme-output {
     width: 71px;
+  }
+
+  /****output user****/
+  .output {
+    min-height: 6rem;
+  }
+
+  /****button calculator****/
+  .calculator-btn {
+    gap: 13px 13px;
   }
 }
